[package]
name = "crony"
version = "0.3.4"
edition = "2021"
authors = ["Clément Nerma <clement.nerma@gmail.com>"]
license = "Apache-2.0"
description = "A full-featured replacement for `cron` and `crontab`"
readme = "README.md"
repository = "https://github.com/ClementNerma/Crony"

[[bin]]
name = "crony"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
daemonize-me = "2.0.1"
dirs = "5.0.0"
once_cell = "1.17.1"
os_pipe = "1.1.3"
pomsky = "0.10.0"
pomsky-macro = "0.10.0"
rand = "0.8.5"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tabular = "0.2.0"
time = { version = "0.3.20", features = ["local-offset", "parsing", "formatting", "serde"] }
